ユーザー登録、確認メール送信（mailpit）、メール確認まで。laravel breeze でscaffoldしたものを参考に実装
