# api-docs/api-docs.yaml
@@ -61,7 +61,7 @@ paths:
                   data:
                     type: array
                     items:
-                      $ref: '#/components/schemas/ItemResource'
+                      $ref: '#/components/schemas/MyItemResource'
                 type: object
   /api/login:
     post:
@@ -96,9 +96,38 @@ paths:
                 $ref: '#/components/schemas/UserResource'
         401:
           description: 'Not allowed'
+  /api/users/register:
+    post:
+      tags:
+        - User
+      operationId: postUserRegister
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserRegisterPostRequest'
+      responses:
+        200:
+          description: AOK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserRegisterResource'
+        401:
+          description: 'Not allowed'
 components:
   schemas:
     UserLoginPostRequest:
+      required:
+        - email
+        - password
+      properties:
+        email:
+          type: string
+        password:
+          type: string
+      type: object
+    UserRegisterPostRequest:
       required:
         - email
         - password
@@ -120,6 +149,26 @@ components:
           type: string
         status:
           description: 状態
+          type: string
+      type: object
+    MyItemResource:
+      properties:
+        id:
+          type: integer
+        name:
+          description: 品名
+          type: string
+        description:
+          description: 商品詳細
+          type: string
+        status:
+          description: 状態
+          type: string
+      type: object
+    UserRegisterResource:
+      properties:
+        email_verification_url:
+          description: メールアドレス確認URL
           type: string
       type: object
     UserResource:
